alacarte bitmiş hali

--- a/app/src/main/res/layout/activity_main_listeleme.xml
+++ b/app/src/main/res/layout/activity_main_listeleme.xml
@@ -30,8 +30,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="414dp"
-        android:background="@drawable/hosgeldin_koselik"
+        android:background="@drawable/kenarlikli_kirmizi_koselik"
         android:text="TARİH"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,9 +49,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="369dp"
         android:text="MENÜ PLANLAMASI"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:background="@drawable/listeleme_arkaplan"
+        android:background="@drawable/kenarlikli_yesil_arkaplan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
